--- a/src/theme/style/app.css
+++ b/src/theme/style/app.css
@@ -1,7 +1,7 @@
 .container{
     display: grid;
-    grid-template-rows: 15vh 75vh auto;
+    grid-template-rows: 15vh 75vh 10vh;
     /* background-image: linear-gradient(to bottom right, #bdc3c7, #734b6d); */
-    background-color:  #ffdde1ad;
+    background-color:  #ffdde16a;
     border-right: 40vw solid #843f3fe5;
 }
