--- a/src/theme/style/footer.css
+++ b/src/theme/style/footer.css
@@ -1,3 +1,18 @@
+@font-face {
+    font-family: lelushka;
+    src: url(../font//lelushka-dd3m.otf);
+}
+
 .footer-container{
-    height: 10vh
+    height: auto
+}
+
+.footer-container h2{
+    position: relative;
+    top: 40px;
+    font-family: lelushka;
+    margin-left: 1vw;
+    color: rgba(0, 0, 0, 0.884);
+    font-size: 10px;
+    height: 100%;
 }
