--- a/src/theme/style/navbar.css
+++ b/src/theme/style/navbar.css
@@ -24,8 +24,13 @@ li{
     cursor: pointer;
     color: white;
     font-weight: 300;
-    font-size: 15px;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-size: 17px;
+    font-family: helvic;
+    transition: 0.3s;
+}
+
+li:hover{
+    color:rgba(255, 196, 0, 0.843)
 }
 
 .logo-wrapper{
