--- a/src/theme/style/product-info.css
+++ b/src/theme/style/product-info.css
@@ -1,4 +1,51 @@
+@font-face {
+    font-family: sacramento;
+    src: url(../font/Sacramento-Regular.ttf);
+}
+
+@font-face {
+    font-family: benne-regular;
+    src: url(../font/Benne-Regular.otf);
+}
+
+@font-face {
+    font-family: clementPDab;
+    src: url(../font/ClementePDab-HairlineItalic.ttf);
+}
+
+@font-face {
+    font-family: lelushka;
+    src: url(../font//lelushka-dd3m.otf);
+}
+
 .one-product-info-container{
     display: grid;
-    grid-template-columns: 30vw 30vw;
+    grid-template-columns: 30vw 30vw 40vw;
+}
+
+.product-informations{
+    font-weight: 400;
+    font-family: sacramento;
+    font-size: 30px;
+}
+
+.buy-button{
+    cursor: pointer;
+    background-color: #843f3fe5;
+    height: 4vh;
+    width: 10vw;
+    border-radius: 6px;
+    color: white;
+    box-shadow: rgba(0, 0, 0, 0.09) 0px 2px 1px, rgba(0, 0, 0, 0.09) 0px 4px 2px, rgba(0, 0, 0, 0.09) 0px 8px 4px, rgba(0, 0, 0, 0.09) 0px 16px 8px, rgba(0, 0, 0, 0.09) 0px 32px 16px;
+    font-family: benne-regular;
+}
+
+.buy-button:hover{
+    color: rgba(0, 0, 0, 0.585)
+}
+
+.one-product-info-container h2{
+    font-family: benne-regular;
+    font-style:oblique;
+    text-align: center;
 }
